--- a/website/templates/tagline.html
+++ b/website/templates/tagline.html
@@ -1,3 +1,21 @@
 <!-- your html code here -->
 <!-- Also called a hero image or a jumbotron before bootstrap 5. This might be helpful: https://getbootstrap.com/docs/5.1/examples/jumbotron/ -->
+<div class="row justify-content-center">
+  <div class="w-75 text-center object-fit-cover p-0" style="
+  background-image: url('https://i.ibb.co/bHbnnsM/Tagline-pexels-photo-photos-7837-pexels-photo.webp');
+  height: 40vh;
+  width: 100vp;
+  ">
+    <div class="mask h-100" style="background-color: rgba(0, 0, 0, 0.2);">
+      <div class="d-flex justify-content-center my-5 h-100">
+        <div class="text-dark w-100">
+          <h1 class="mb-3 bg-light display-1" >One Page Wonder</h1>
+          <h4 class="mb-3 bg-light display-6 p-1">Will Knock Your Socks Off</h4>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <p>Hello, I'm the tagline and I was loaded using ajax from templates/tagline.html</p>
