--- a/website/templates/navbar.html
+++ b/website/templates/navbar.html
@@ -1,6 +1,6 @@
 <!-- your html code here -->
 <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body" data-bs-theme="dark">
-    <div class="container-fluid">
+    <div class="container-fluid w-75">
       <a class="navbar-brand text-secondary" href="#">Start Bootstrap</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
